app/globals.css
@import "tailwindcss";

/* 404 page overrides */
body.page-404 { background: black; }
body.page-404 footer { display: none; }

/* Glitch effect for 404 page */
.glitch {
  color: white;
  position: relative;
}
.glitch::after {
  content: attr(data-text);
  position: absolute;
  left: 2px;
  top: 0;
  color: white;
  background: black;
  overflow: hidden;
  text-shadow: -1px 0 red;
  clip: rect(0, 900px, 0, 0);
  animation: noise-anim 2s infinite linear alternate-reverse;
}
.glitch::before {
  content: attr(data-text);
  position: absolute;
  left: -2px;
  top: 0;
  color: white;
  background: black;
  overflow: hidden;
  text-shadow: 1px 0 blue;
  clip: rect(0, 900px, 0, 0);
  animation: noise-anim-2 3s infinite linear alternate-reverse;
}

@keyframes noise-anim {
  0%   { clip: rect(42px, 9999px, 44px, 0); }
  5%   { clip: rect(12px, 9999px, 59px, 0); }
  10%  { clip: rect(85px, 9999px, 23px, 0); }
  15%  { clip: rect(7px,  9999px, 71px, 0); }
  20%  { clip: rect(53px, 9999px, 18px, 0); }
  25%  { clip: rect(91px, 9999px, 36px, 0); }
  30%  { clip: rect(27px, 9999px, 63px, 0); }
  35%  { clip: rect(64px, 9999px, 9px,  0); }
  40%  { clip: rect(3px,  9999px, 78px, 0); }
  45%  { clip: rect(48px, 9999px, 31px, 0); }
  50%  { clip: rect(76px, 9999px, 55px, 0); }
  55%  { clip: rect(19px, 9999px, 88px, 0); }
  60%  { clip: rect(37px, 9999px, 14px, 0); }
  65%  { clip: rect(94px, 9999px, 47px, 0); }
  70%  { clip: rect(22px, 9999px, 66px, 0); }
  75%  { clip: rect(58px, 9999px, 5px,  0); }
  80%  { clip: rect(83px, 9999px, 39px, 0); }
  85%  { clip: rect(11px, 9999px, 92px, 0); }
  90%  { clip: rect(67px, 9999px, 28px, 0); }
  95%  { clip: rect(45px, 9999px, 74px, 0); }
  100% { clip: rect(33px, 9999px, 51px, 0); }
}

@keyframes noise-anim-2 {
  0%   { clip: rect(65px, 9999px, 12px, 0); }
  5%   { clip: rect(34px, 9999px, 87px, 0); }
  10%  { clip: rect(8px,  9999px, 56px, 0); }
  15%  { clip: rect(79px, 9999px, 21px, 0); }
  20%  { clip: rect(46px, 9999px, 93px, 0); }
  25%  { clip: rect(15px, 9999px, 38px, 0); }
  30%  { clip: rect(72px, 9999px, 4px,  0); }
  35%  { clip: rect(29px, 9999px, 61px, 0); }
  40%  { clip: rect(88px, 9999px, 17px, 0); }
  45%  { clip: rect(52px, 9999px, 43px, 0); }
  50%  { clip: rect(6px,  9999px, 96px, 0); }
  55%  { clip: rect(41px, 9999px, 25px, 0); }
  60%  { clip: rect(77px, 9999px, 69px, 0); }
  65%  { clip: rect(23px, 9999px, 48px, 0); }
  70%  { clip: rect(90px, 9999px, 11px, 0); }
  75%  { clip: rect(16px, 9999px, 82px, 0); }
  80%  { clip: rect(57px, 9999px, 35px, 0); }
  85%  { clip: rect(3px,  9999px, 70px, 0); }
  90%  { clip: rect(84px, 9999px, 26px, 0); }
  95%  { clip: rect(49px, 9999px, 58px, 0); }
  100% { clip: rect(31px, 9999px, 95px, 0); }
}


@font-face {
  font-family: 'Garamond';
  src: url('/fonts/garamond/Garamond_Condensed_Light_Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'SatishSans';
  src: url('/fonts/satish-font/Satish-sans.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'SatishCapsSans';
  src: url('/fonts/satish-font/satish-caps-sans.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'FunnelDisplay';
  src: url('/fonts/FunnelDisplay/FunnelDisplay-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'FunnelDisplay';
  src: url('/fonts/FunnelDisplay/FunnelDisplay-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Poppins';
  src: url('/fonts/Poppins/Poppins-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Poppins';
  src: url('/fonts/Poppins/Poppins-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Poppins';
  src: url('/fonts/Poppins/Poppins-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Poppins';
  src: url('/fonts/Poppins/Poppins-SemiBold.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Poppins';
  src: url('/fonts/Poppins/Poppins-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CarmenSans';
  src: url('/fonts/CarmenSans/CarmenSans-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CarmenSans';
  src: url('/fonts/CarmenSans/CarmenSans-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CarmenSans';
  src: url('/fonts/CarmenSans/CarmenSans-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CarmenSans';
  src: url('/fonts/CarmenSans/CarmenSans-SemiBold.ttf') format('truetype');
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'CarmenSans';
  src: url('/fonts/CarmenSans/CarmenSans-Bold.ttf') format('truetype');
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Montserrat';
  src: url('/fonts/Montserrat/Montserrat-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Montserrat';
  src: url('/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
/* ... */

